--- a/sass/style.scss
+++ b/sass/style.scss
@@ -584,6 +584,7 @@ textarea {
 .sendOrder {
   width: 100%;
   clear: both;
+  margin-bottom: 140px;
   .btn-sendOrder {
     margin: 0 auto;
     display: block;
