buy btn on index page models
+ max-width for gallery on single case page

--- a/css/style.css
+++ b/css/style.css
@@ -2464,7 +2464,8 @@ h1 {
   margin: 30px auto;
   display: block; }
 .picsGallery .picsGallery-thumbs, .picsGallery .picsGallery-show {
-  overflow: hidden; }
+  overflow: hidden;
+  max-width: 550px; }
 .picsGallery .picsGallery-show {
   display: none; }
 
