--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -125,7 +125,7 @@ $navItem : 1/5;
   color: #fff;
   text-decoration: none;
   width: 100%;
-  background: #ed1c24;
+  background: #CA2D33;
   border-bottom: 1px solid white;
   padding: 0.7em 1em;
   float: left;
