--- a/sass/style.scss
+++ b/sass/style.scss
@@ -750,7 +750,7 @@ footer {
       line-height: $size;
     }
   }
-  a{
+  a, .fa{
     -webkit-transition: all .4s ease-out;
     -moz-transition: all .4s ease-out;
     -o-transition: all .4s ease-out;
