--- a/css/style.css
+++ b/css/style.css
@@ -2095,12 +2095,11 @@ th {
   .nav-collapse {
     overflow: visible !important; }
     .nav-collapse .fa {
-      margin-left: -20px;
-      visibility: hidden; }
+      margin-left: -20px; }
     .nav-collapse .inCart {
       background: #37302a; }
     .nav-collapse li:hover .fa {
-      visibility: visible; }
+      color: #fff; }
     .nav-collapse li:hover .inCart {
       background: #fff;
       color: #37302a; }
@@ -2110,8 +2109,11 @@ th {
     background: #F3F3F3; }
 
   .nav-collapse a:hover {
-    color: #fff;
-    background: #d30000; }
+    color: #111;
+    background: #A8A8A8; }
+
+  .nav-collapse .lang a:hover {
+    color: #ffffff; }
 
   .nav-collapse ul ul li {
     width: 20%; }
@@ -2808,7 +2810,7 @@ footer {
   h1 {
     line-height: 1.2em; }
 
-  a {
+  a, .fa {
     -webkit-transition: all .4s ease-out;
     -moz-transition: all .4s ease-out;
     -o-transition: all .4s ease-out;
