--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -163,14 +163,15 @@ $navItem : 1/5;
     overflow: visible!important;
     .fa {
       margin-left: -20px;
-      visibility: hidden;
+//      visibility: hidden;
     }
     .inCart {
       background: #37302a;
     }
     li:hover{
       & .fa {
-        visibility: visible;
+//        visibility: visible;
+        color: #fff;
       }
       & .inCart {
         background:#fff;
@@ -183,8 +184,11 @@ $navItem : 1/5;
     background: #F3F3F3;
   }
   .nav-collapse a:hover {
-      color: #fff;
-      background: #d30000;
+      color: #111;
+      background: #A8A8A8;
+  }
+  .nav-collapse .lang a:hover {
+      color: #ffffff;
   }
   .nav-collapse ul ul li {
   width: percentage($navDropItem);
