--- a/sass/style.scss
+++ b/sass/style.scss
@@ -856,7 +856,7 @@ footer, .push {
     }
     .singleProductPic {
       margin: 20px auto;
-      display: block !important;
+      display: block;
       width: 100%;
       max-width: 100%;
     }
