--- a/css/style.css
+++ b/css/style.css
@@ -2225,7 +2225,8 @@ textarea {
   text-transform: uppercase;
   font-weight: 700;
   border: 1px solid #ffffff;
-  font-family: 'Open Sans', sans-serif; }
+  font-family: 'Open Sans', sans-serif;
+  min-width: 80px; }
   .btn .fa {
     padding-right: 6px; }
 
@@ -2445,6 +2446,14 @@ h1 {
     position: absolute;
     bottom: 0;
     right: 0; }
+
+/* on a single item page */
+.buyThisItem {
+  text-align: center; }
+  .buyThisItem .btn {
+    font-size: 16px; }
+  .buyThisItem b {
+    padding-left: 10px; }
 
 /* brands catalog */
 .brandModel {
