--- a/sass/style.scss
+++ b/sass/style.scss
@@ -85,6 +85,7 @@ textarea {
   font-weight: 700;
   border: 1px solid $white;
   font-family: 'Open Sans', sans-serif;
+  min-width: 80px;
 }
 .btn{
   @include button;
@@ -346,6 +347,17 @@ textarea {
     position: absolute;
     bottom: 0;
     right: 0;
+  }
+}
+
+/* on a single item page */
+.buyThisItem {
+  text-align: center;
+  .btn {
+    font-size: 16px;
+  }
+  b{
+    padding-left: 10px;
   }
 }
 
@@ -746,13 +758,13 @@ footer, .push {
 
 
 
-//  ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! 
-//  ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! 
-//  ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! 
-//  ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! 
-//  ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! 
-//  ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! 
-//  ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! 
+//  ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! !
+//  ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! !
+//  ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! !
+//  ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! !
+//  ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! !
+//  ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! !
+//  ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! !
 //from 768px to the end
 @include breakpoint($tablet) {
   @each $header, $size in (h1: 2em, h2: 1.5em, h3: 1.2em) {
