--- a/css/style.css
+++ b/css/style.css
@@ -2454,7 +2454,8 @@ h1 {
     font-size: 16px;
     margin-top: 20px; }
   .buyThisItem b {
-    padding-left: 10px; }
+    padding-left: 10px;
+    font-size: 16px; }
 
 /* brands catalog */
 .brandModel {
@@ -2777,43 +2778,46 @@ footer {
   padding: 80px 0px; }
 
 /* pre pay page before checkout*/
-.prePay {
-  margin-top: 60px; }
-  .prePay-title {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    width: 100%;
-    float: left;
-    padding-left: 0.41667%;
-    padding-right: 0.41667%;
-    margin-top: 10px;
-    text-align: left;
-    padding-left: 20px;
-    font-weight: 800;
-    text-transform: capitalize; }
-  .prePay-data {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    width: 100%;
-    float: left;
-    padding-left: 0.41667%;
-    padding-right: 0.41667%;
-    text-transform: capitalize; }
-  .prePay input {
-    margin-top: 10px;
-    margin-bottom: 20px; }
-  .prePay .sendOrder {
-    padding-top: 30px;
-    margin-bottom: 60px; }
+.prePay .headLogo {
+  position: relative;
+  margin-bottom: 10px; }
+.prePay-title {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+  float: left;
+  padding-left: 0.41667%;
+  padding-right: 0.41667%;
+  margin-top: 4px;
+  text-align: left;
+  padding-left: 20px;
+  padding-bottom: 0;
+  font-weight: 800;
+  text-transform: capitalize; }
+.prePay-data {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+  float: left;
+  padding-left: 0.41667%;
+  padding-right: 0.41667%;
+  text-transform: capitalize; }
+.prePay input {
+  margin-top: 4px;
+  margin-bottom: 10px; }
+.prePay .sendOrder {
+  padding-top: 30px;
+  margin-bottom: 60px; }
 
 /* sticky footer */
 * {
   margin: 0; }
 
 html, body {
-  height: 100%; }
+  height: 100%;
+  overflow-x: hidden; }
 
 .wrapper {
   min-height: 100%;
@@ -3044,25 +3048,23 @@ footer, .push {
     margin: 30px 30%; }
 
   /* pre pay page before checkout*/
-  .prePay {
-    margin-top: 60px; }
-    .prePay-title {
-      -moz-box-sizing: border-box;
-      -webkit-box-sizing: border-box;
-      box-sizing: border-box;
-      width: 50%;
-      float: left;
-      padding-left: 0.41667%;
-      padding-right: 0.41667%;
-      text-align: right; }
-    .prePay-data {
-      -moz-box-sizing: border-box;
-      -webkit-box-sizing: border-box;
-      box-sizing: border-box;
-      width: 50%;
-      float: left;
-      padding-left: 0.41667%;
-      padding-right: 0.41667%; } }
+  .prePay-title {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 37.5%;
+    float: left;
+    padding-left: 0.41667%;
+    padding-right: 0.41667%;
+    text-align: right; }
+  .prePay-data {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 37.5%;
+    float: left;
+    padding-left: 0.41667%;
+    padding-right: 0.41667%; } }
 @media (min-width: 960px) {
   h1 {
     font-size: 2.2em; }
