--- a/sass/style.scss
+++ b/sass/style.scss
@@ -717,14 +717,19 @@ footer {
   }
 }
 
+
 /* pre pay page before checkout*/
 .prePay{
-  margin-top: 60px;
+  .headLogo{
+    position: relative;
+    margin-bottom: 10px;
+  }
   &-title{
     @include span(24);
-    margin-top: 10px;
+    margin-top: 4px;
     text-align: left;
     padding-left: 20px;
+    padding-bottom: 0;
     font-weight: 800;
     text-transform: capitalize;
   }
@@ -733,8 +738,8 @@ footer {
     text-transform: capitalize;
   }
   input {
-    margin-top: 10px;
-    margin-bottom: 20px;
+    margin-top: 4px;
+    margin-bottom: 10px;
   }
   .sendOrder {
     padding-top: 30px;
@@ -748,6 +753,7 @@ footer {
 }
 html, body {
   height: 100%;
+  overflow-x: hidden;
 }
 .wrapper {
   min-height: 100%;
@@ -940,13 +946,12 @@ footer, .push {
   }
   /* pre pay page before checkout*/
   .prePay{
-    margin-top: 60px;
     &-title{
-      @include span(12);
+      @include span(9);
       text-align: right;
     }
     &-data {
-      @include span(12);
+      @include span(9);
     }
   }
 }
