--- a/css/style.css
+++ b/css/style.css
@@ -2276,8 +2276,7 @@ textarea {
   box-sizing: border-box;
   max-width: 100%;
   margin-left: auto;
-  margin-right: auto;
-  position: relative; }
+  margin-right: auto; }
   .container:after {
     content: " ";
     display: block;
@@ -2351,13 +2350,17 @@ h1 {
 /* news */
 .newsBlock {
   margin-bottom: 30px; }
+  .newsBlock-link {
+    margin: 0 auto;
+    max-width: 355px;
+    display: block; }
   .newsBlock .img-responsive {
     width: 90%;
     margin: 0 auto;
     display: block; }
   .newsBlock .img-news {
     width: 40%;
-    max-width: 400px; }
+    max-width: 355px; }
     .newsBlock .img-news.pullLeft, .newsBlock .img-news.pullRight {
       padding: 10px; }
   .newsBlock h3 {
